# ryu-recipes

./: README.md  plugin.json
.github/workflows/: canary.yml  nightly.yml  release.yml
backend/: Cargo.toml  Cargo.toml-E
backend/src/: api.rs  lib.rs  main.rs
crates/ghost/core/: Cargo.toml  README.md
crates/ghost/core/src/cdp/: mod.rs
crates/ghost/core/src/learning/: mod.rs
crates/ghost/core/src/recipe/: engine.rs  store.rs  types.rs
crates/ghost/core/tests/: cdp_and_types.rs  learning_session.rs  recipe_engine.rs  recipe_store.rs
